// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`React > jsx > Javascript Test > AdvancedRef 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Javascript Test > Basic 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Javascript Test > Basic Context 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Javascript Test > Basic OnMount Update 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function MyBasicOnMountUpdateComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  const [names, setNames] = useState(() => [\\"Steve\\", \\"PatrickJS\\"]);

  useEffect(() => {
    setName(\\"PatrickJS onInit\\" + props.hi);
  }, []);

  useEffect(() => {
    setName(\\"PatrickJS onMount\\" + props.bye);
  }, []);

  return <div>Hello {name}</div>;
}

export default MyBasicOnMountUpdateComponent;
"
`;

exports[`React > jsx > Javascript Test > Basic Outputs 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function MyBasicOutputsComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    props.onMessage(name);
    props.onEvent(props.message);
  }, []);

  return <div />;
}

export default MyBasicOutputsComponent;
"
`;

exports[`React > jsx > Javascript Test > Basic Outputs Meta 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function MyBasicOutputsComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    props.onMessage(name);
    props.onEvent(props.message);
  }, []);

  return <div />;
}

export default MyBasicOutputsComponent;
"
`;

exports[`React > jsx > Javascript Test > BasicAttribute 1`] = `"Cannot read properties of undefined (reading 'spellcheck')"`;

exports[`React > jsx > Javascript Test > BasicBooleanAttribute 1`] = `"Cannot read properties of undefined (reading 'toggle')"`;

exports[`React > jsx > Javascript Test > BasicChildComponent 1`] = `"Cannot read properties of undefined (reading 'id')"`;

exports[`React > jsx > Javascript Test > BasicFor 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Javascript Test > BasicRef 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Javascript Test > BasicRefAssignment 1`] = `"Cannot read properties of undefined (reading 'onClick')"`;

exports[`React > jsx > Javascript Test > BasicRefPrevious 1`] = `"Cannot read properties of undefined (reading 'onClick')"`;

exports[`React > jsx > Javascript Test > Button 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Javascript Test > Columns 1`] = `
"import * as React from \\"react\\";

function Column(props) {
  function getColumns() {
    return props.columns || [];
  }

  function getGutterSize() {
    return typeof props.space === \\"number\\" ? props.space || 0 : 20;
  }

  function getWidth(index) {
    const columns = getColumns();
    return (columns[index] && columns[index].width) || 100 / columns.length;
  }

  function getColumnCssWidth(index) {
    const columns = getColumns();
    const gutterSize = getGutterSize();
    const subtractWidth = (gutterSize * (columns.length - 1)) / columns.length;
    return \`calc(\${getWidth(index)}% - \${subtractWidth}px)\`;
  }

  return (
    <>
      <div className=\\"builder-columns div\\">
        {props.columns?.map((column, index) => (
          <div className=\\"builder-column div-2\\">
            {column.content}
            {index}
          </div>
        ))}
      </div>
      <style jsx>{\`
        .div {
          display: flex;
          flex-direction: column;
          align-items: stretch;
          line-height: normal;
        }
        @media (max-width: 999px) {
          .div {
            flex-direction: row;
          }
        }
        @media (max-width: 639px) {
          .div {
            flex-direction: row-reverse;
          }
        }
        .div-2 {
          flex-grow: 1;
        }
      \`}</style>
    </>
  );
}

export default Column;
"
`;

exports[`React > jsx > Javascript Test > ContentSlotHtml 1`] = `
"import * as React from \\"react\\";

function ContentSlotCode(props) {
  return (
    <div>
      <>{props.slotTesting}</>
      <div>
        <hr />
      </div>
      <div>
        <>{props.children}</>
      </div>
    </div>
  );
}

export default ContentSlotCode;
"
`;

exports[`React > jsx > Javascript Test > ContentSlotJSX 1`] = `"Cannot read properties of undefined (reading 'name')"`;

exports[`React > jsx > Javascript Test > CustomCode 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Javascript Test > Embed 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Javascript Test > Form 1`] = `"Cannot read properties of undefined (reading 'validate')"`;

exports[`React > jsx > Javascript Test > Image 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Javascript Test > Image State 1`] = `"Cannot read properties of undefined (reading 'src')"`;

exports[`React > jsx > Javascript Test > Img 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`React > jsx > Javascript Test > Input 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Javascript Test > InputParent 1`] = `"Cannot read properties of undefined (reading 'onChange')"`;

exports[`React > jsx > Javascript Test > RawText 1`] = `"Cannot read properties of undefined (reading 'class')"`;

exports[`React > jsx > Javascript Test > Section 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Javascript Test > Select 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Javascript Test > SlotDefault 1`] = `
"import * as React from \\"react\\";

function SlotCode(props) {
  return (
    <div>
      <>
        {props.children || <div className=\\"default-slot\\">Default content</div>}
      </>
    </div>
  );
}

export default SlotCode;
"
`;

exports[`React > jsx > Javascript Test > SlotHtml 1`] = `
"import * as React from \\"react\\";
import ContentSlotCode from \\"./content-slot-jsx.raw\\";

function SlotCode(props) {
  return (
    <div>
      <ContentSlotCode testing={<div>Hello</div>}></ContentSlotCode>
    </div>
  );
}

export default SlotCode;
"
`;

exports[`React > jsx > Javascript Test > SlotJsx 1`] = `
"import * as React from \\"react\\";
import ContentSlotCode from \\"./content-slot-jsx.raw\\";

function SlotCode(props) {
  return (
    <div>
      <ContentSlotCode slotTesting={<div>Hello</div>} />
    </div>
  );
}

export default SlotCode;
"
`;

exports[`React > jsx > Javascript Test > SlotNamed 1`] = `
"import * as React from \\"react\\";

function SlotCode(props) {
  return (
    <div>
      <>{props.myAwesomeSlot}</>
      <>{props.top}</>
      <>{props.left || \\"Default left\\"}</>
      <>{props.children || \\"Default Child\\"}</>
    </div>
  );
}

export default SlotCode;
"
`;

exports[`React > jsx > Javascript Test > Stamped.io 1`] = `"Cannot read properties of undefined (reading 'data-user')"`;

exports[`React > jsx > Javascript Test > Submit 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Javascript Test > Text 1`] = `"Cannot read properties of undefined (reading 'contentEditable')"`;

exports[`React > jsx > Javascript Test > Textarea 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Javascript Test > Video 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Javascript Test > arrowFunctionInUseStore 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props) {
  const [name, setName] = useState(() => \\"steve\\");

  function setName(value) {
    setName(value);
  }

  function updateNameWithArrowFn(value) {
    setName(value);
  }

  return <div>Hello {name}</div>;
}

export default MyComponent;
"
`;

exports[`React > jsx > Javascript Test > basicForNoTagReference 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyBasicForNoTagRefComponent(props) {
  const [name, setName] = useState(() => \\"VincentW\\");

  const [TagName, setTagName] = useState(() => \\"div\\");

  function TagNameGetter() {
    return \\"span\\";
  }

  const [Tag, setTag] = useState(() => \\"span\\");

  const TagNameGetterRef = TagNameGetter();

  return (
    <TagNameGetterRef>
      Hello <Tag>{name}</Tag>
      {props.actions?.map((action) => (
        <TagName>
          <action.icon />
          <span>{action.text}</span>
        </TagName>
      ))}
    </TagNameGetterRef>
  );
}

export default MyBasicForNoTagRefComponent;
"
`;

exports[`React > jsx > Javascript Test > basicForwardRef 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Javascript Test > basicForwardRefMetadata 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Javascript Test > basicOnUpdateReturn 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function MyBasicOnUpdateReturnComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    const controller = new AbortController();
    const signal = controller.signal;
    fetch(\\"https://patrickjs.com/api/resource.json\\", {
      signal,
    })
      .then((response) => response.json())
      .then((data) => {
        setName(data.name);
      });
    return () => {
      if (!signal.aborted) {
        controller.abort();
      }
    };
  }, [name]);

  return <div>Hello! {name}</div>;
}

export default MyBasicOnUpdateReturnComponent;
"
`;

exports[`React > jsx > Javascript Test > class + ClassName + css 1`] = `
"import * as React from \\"react\\";

function MyBasicComponent(props) {
  return (
    <>
      <div className=\\"test2 test div\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
      <style jsx>{\`
        .div {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Javascript Test > class + css 1`] = `
"import * as React from \\"react\\";

function MyBasicComponent(props) {
  return (
    <>
      <div className=\\"test div\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
      <style jsx>{\`
        .div {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Javascript Test > className + css 1`] = `
"import * as React from \\"react\\";

function MyBasicComponent(props) {
  return (
    <>
      <div className=\\"test div\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
      <style jsx>{\`
        .div {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Javascript Test > className 1`] = `"Cannot read properties of undefined (reading 'class')"`;

exports[`React > jsx > Javascript Test > classState 1`] = `"Cannot read properties of undefined (reading 'class')"`;

exports[`React > jsx > Javascript Test > componentWithContext 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Javascript Test > componentWithContextMultiRoot 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Javascript Test > contentState 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Javascript Test > defaultProps 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Javascript Test > defaultPropsOutsideComponent 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Javascript Test > defaultValsWithTypes 1`] = `
"import * as React from \\"react\\";

const DEFAULT_VALUES = {
  name: \\"Sami\\",
};

function ComponentWithTypes(props) {
  return <div> Hello {props.name || DEFAULT_VALUES.name}</div>;
}

export default ComponentWithTypes;
"
`;

exports[`React > jsx > Javascript Test > expressionState 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props) {
  const [refToUse, setRefToUse] = useState(() =>
    !(props.componentRef instanceof Function) ? props.componentRef : null
  );

  return <div>{refToUse}</div>;
}

export default MyComponent;
"
`;

exports[`React > jsx > Javascript Test > getterState 1`] = `
"import * as React from \\"react\\";

function Button(props) {
  function foo2() {
    return props.foo + \\"foo\\";
  }

  function bar() {
    return \\"bar\\";
  }

  function baz(i) {
    return i + foo2().length;
  }

  return (
    <div>
      <p>{foo2()}</p>
      <p>{bar()}</p>
      <p>{baz(1)}</p>
    </div>
  );
}

export default Button;
"
`;

exports[`React > jsx > Javascript Test > import types 1`] = `"Cannot read properties of undefined (reading 'state.getRenderContentProps(props.renderContentProps.block, 0)')"`;

exports[`React > jsx > Javascript Test > multipleOnUpdate 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function MultipleOnUpdate(props) {
  useEffect(() => {
    console.log(\\"Runs on every update/rerender\\");
  });
  useEffect(() => {
    console.log(\\"Runs on every update/rerender as well\\");
  });

  return <div />;
}

export default MultipleOnUpdate;
"
`;

exports[`React > jsx > Javascript Test > multipleOnUpdateWithDeps 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function MultipleOnUpdateWithDeps(props) {
  const [a, setA] = useState(() => \\"a\\");

  const [b, setB] = useState(() => \\"b\\");

  const [c, setC] = useState(() => \\"c\\");

  const [d, setD] = useState(() => \\"d\\");

  useEffect(() => {
    console.log(\\"Runs when a or b changes\\", a, b);

    if (a === \\"a\\") {
      setA(\\"b\\");
    }
  }, [a, b]);
  useEffect(() => {
    console.log(\\"Runs when c or d changes\\", c, d);

    if (a === \\"a\\") {
      setA(\\"b\\");
    }
  }, [c, d]);

  return <div />;
}

export default MultipleOnUpdateWithDeps;
"
`;

exports[`React > jsx > Javascript Test > multipleSpreads 1`] = `"Cannot read properties of undefined (reading 'attrs')"`;

exports[`React > jsx > Javascript Test > nestedShow 1`] = `
"import * as React from \\"react\\";

function NestedShow(props) {
  return (
    <>
      {props.conditionA ? (
        <>
          {!props.conditionB ? (
            <div>if condition A and condition B</div>
          ) : (
            <div>else-condition-B</div>
          )}
        </>
      ) : (
        <div>else-condition-A</div>
      )}
    </>
  );
}

export default NestedShow;
"
`;

exports[`React > jsx > Javascript Test > nestedStyles 1`] = `
"import * as React from \\"react\\";

function NestedStyles(props) {
  return (
    <>
      <div className=\\"div\\">Hello world</div>
      <style jsx>{\`
        .div {
          display: flex;
          --bar: red;
          color: var(--bar);
        }
        @media (max-width: env(--mobile)) {
          .div {
            display: block;
          }
        }
        .div:hover {
          display: flex;
        }
        .div:active {
          display: inline;
        }
        .div .nested-selector {
          display: grid;
        }
        .div .nested-selector:hover {
          display: block;
        }
        .div.nested-selector:active {
          display: inline-block;
        }
      \`}</style>
    </>
  );
}

export default NestedStyles;
"
`;

exports[`React > jsx > Javascript Test > onEvent 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Javascript Test > onInit & onMount 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function OnInit(props) {
  useEffect(() => {
    console.log(\\"onInit\\");
  }, []);

  useEffect(() => {
    console.log(\\"onMount\\");
  }, []);

  return <div />;
}

export default OnInit;
"
`;

exports[`React > jsx > Javascript Test > onInit 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

export const defaultValues = {
  name: \\"PatrickJS\\",
};

function OnInit(props) {
  const [name, setName] = useState(() => \\"\\");

  useEffect(() => {
    setName(defaultValues.name || props.name);
    console.log(\\"set defaults with props\\");
  }, []);

  return <div>Default name defined by parent {name}</div>;
}

export default OnInit;
"
`;

exports[`React > jsx > Javascript Test > onMount 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function Comp(props) {
  useEffect(() => {
    console.log(\\"Runs on mount\\");
  }, []);

  useEffect(() => {
    return () => {
      console.log(\\"Runs on unMount\\");
    };
  }, []);

  return <div />;
}

export default Comp;
"
`;

exports[`React > jsx > Javascript Test > onMountMultiple 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function Comp(props) {
  useEffect(() => {
    console.log(\\"Runs on mount\\");
  }, []);
  useEffect(() => {
    console.log(\\"Another one runs on Mount\\");
  }, []);
  useEffect(() => {
    console.log(\\"SSR runs on Mount\\");
  }, []);

  return <div />;
}

export default Comp;
"
`;

exports[`React > jsx > Javascript Test > onUpdate 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function OnUpdate(props) {
  useEffect(() => {
    console.log(\\"Runs on every update/rerender\\");
  });

  return <div />;
}

export default OnUpdate;
"
`;

exports[`React > jsx > Javascript Test > onUpdateWithDeps 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function OnUpdateWithDeps(props) {
  const [a, setA] = useState(() => \\"a\\");

  const [b, setB] = useState(() => \\"b\\");

  useEffect(() => {
    console.log(\\"Runs when a, b or size changes\\", a, b, props.size);
  }, [a, b, props.size]);

  return <div />;
}

export default OnUpdateWithDeps;
"
`;

exports[`React > jsx > Javascript Test > preserveExportOrLocalStatement 1`] = `
"import * as React from \\"react\\";

const b = 3;
const foo = () => {};
export const a = 3;
export const bar = () => {};
export function run(value) {}

function MyBasicComponent(props) {
  return <div />;
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Javascript Test > preserveTyping 1`] = `
"import * as React from \\"react\\";

function MyBasicComponent(props) {
  return (
    <div>Hello! I can run in React, Vue, Solid, or Liquid! {props.name}</div>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Javascript Test > propsDestructure 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyBasicComponent(props) {
  const [name, setName] = useState(() => \\"Decadef20\\");

  return (
    <div>
      {props.children}
      {props.type}
      Hello! I can run in React, Vue, Solid, or Liquid!
    </div>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Javascript Test > propsInterface 1`] = `
"import * as React from \\"react\\";

function MyBasicComponent(props) {
  return (
    <div>Hello! I can run in React, Vue, Solid, or Liquid! {props.name}</div>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Javascript Test > propsType 1`] = `
"import * as React from \\"react\\";

function MyBasicComponent(props) {
  return (
    <div>Hello! I can run in React, Vue, Solid, or Liquid! {props.name}</div>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Javascript Test > referencingFunInsideHook 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function OnUpdate(props) {
  function foo(params) {}

  function bar() {}

  function zoo() {
    const params = {
      cb: bar,
    };
  }

  useEffect(() => {
    foo({
      someOption: bar,
    });
  });

  return <div />;
}

export default OnUpdate;
"
`;

exports[`React > jsx > Javascript Test > renderBlock 1`] = `"Cannot read properties of undefined (reading 'state.attributes')"`;

exports[`React > jsx > Javascript Test > renderContentExample 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Javascript Test > rootFragmentMultiNode 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Javascript Test > rootShow 1`] = `
"import * as React from \\"react\\";

function RenderStyles(props) {
  return (
    <>
      {props.foo === \\"bar\\" ? (
        <>
          <div>Bar</div>
        </>
      ) : (
        <div>Foo</div>
      )}
    </>
  );
}

export default RenderStyles;
"
`;

exports[`React > jsx > Javascript Test > self-referencing component 1`] = `
"import * as React from \\"react\\";

function MyComponent(props) {
  return (
    <div>
      {props.name}
      {props.name === \\"Batman\\" ? <MyComponent name=\\"Bruce Wayne\\" /> : null}
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > jsx > Javascript Test > self-referencing component with children 1`] = `
"import * as React from \\"react\\";

function MyComponent(props) {
  return (
    <div>
      {props.name}
      {props.children}
      {props.name === \\"Batman\\" ? (
        <MyComponent name=\\"Bruce\\">
          <div>Wayne</div>
        </MyComponent>
      ) : null}
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > jsx > Javascript Test > showWithFor 1`] = `"Cannot read properties of undefined (reading 'key')"`;

exports[`React > jsx > Javascript Test > showWithRootText 1`] = `
"import * as React from \\"react\\";

function ShowRootText(props) {
  return <>{props.conditionA ? <>ContentA</> : <div>else-condition-A</div>}</>;
}

export default ShowRootText;
"
`;

exports[`React > jsx > Javascript Test > signalsOnUpdate 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function MyBasicComponent(props) {
  useEffect(() => {
    console.log(\\"props.id changed\\", props.id);
    console.log(\\"props.foo.value.bar.baz changed\\", props.foo.value.bar.baz);
  }, [props.id, props.foo.value.bar.baz]);

  return (
    <>
      <div className=\\"test div\\">
        {props.id}
        {props.foo.value.bar.baz}
      </div>
      <style jsx>{\`
        .div {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Javascript Test > spreadAttrs 1`] = `"Cannot read properties of undefined (reading 'attrs')"`;

exports[`React > jsx > Javascript Test > spreadNestedProps 1`] = `"Cannot read properties of undefined (reading 'props.nested')"`;

exports[`React > jsx > Javascript Test > spreadProps 1`] = `"Cannot read properties of undefined (reading 'props')"`;

exports[`React > jsx > Javascript Test > styleClassAndCss 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`React > jsx > Javascript Test > stylePropClassAndCss 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`React > jsx > Javascript Test > subComponent 1`] = `
"import * as React from \\"react\\";
import Foo from \\"./foo-sub-component\\";

function SubComponent(props) {
  return <Foo />;
}

export default SubComponent;
"
`;

exports[`React > jsx > Javascript Test > svgComponent 1`] = `"Cannot read properties of undefined (reading 'viewBox')"`;

exports[`React > jsx > Javascript Test > typeDependency 1`] = `
"import * as React from \\"react\\";

function TypeDependency(props) {
  return <div>{props.foo}</div>;
}

export default TypeDependency;
"
`;

exports[`React > jsx > Javascript Test > use-style 1`] = `
"import * as React from \\"react\\";

function MyComponent(props) {
  return (
    <>
      <button type=\\"button\\">Button</button>
      <style jsx>{\`
        button {
          background: blue;
          color: white;
          font-size: 12px;
          outline: 1px solid black;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`React > jsx > Javascript Test > use-style-and-css 1`] = `
"import * as React from \\"react\\";

function MyComponent(props) {
  return (
    <>
      <button type=\\"button\\" className=\\"button\\">
        Button
      </button>
      <style jsx>{\`
        button {
          font-size: 12px;
          outline: 1px solid black;
        }

        .button {
          background: blue;
          color: white;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`React > jsx > Javascript Test > use-style-outside-component 1`] = `
"import * as React from \\"react\\";

function MyComponent(props) {
  return (
    <>
      <button type=\\"button\\">Button</button>
      <style jsx>{\`
        button {
          background: blue;
          color: white;
          font-size: 12px;
          outline: 1px solid black;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`React > jsx > Javascript Test > useTarget 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function UseTargetComponent(props) {
  function name() {
    const prefix = 123;
    return prefix + \\"foo\\";
  }

  const [lastName, setLastName] = useState(() => \\"bar\\");

  useEffect(() => {
    console.log(\\"react\\");
    setLastName(\\"baz\\");
  }, []);

  return <div>{name()}</div>;
}

export default UseTargetComponent;
"
`;

exports[`React > jsx > Javascript Test > webComponent 1`] = `
"import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { register } from \\"swiper/element/bundle\\";

function MyBasicWebComponent(props) {
  useEffect(() => {
    register();
  }, []);

  return (
    <swiper-container slides-per-view=\\"3\\" navigation=\\"true\\" pagination=\\"true\\">
      <swiper-slide>Slide 1</swiper-slide>
      <swiper-slide>Slide 2</swiper-slide>
      <swiper-slide>Slide 3</swiper-slide>
    </swiper-container>
  );
}

export default MyBasicWebComponent;
"
`;

exports[`React > jsx > Remove Internal mitosis package 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyBasicComponent(props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  return (
    <div>Hello {name}! I can run in React, Qwik, Vue, Solid, or Liquid!</div>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Typescript Test > AdvancedRef 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Typescript Test > Basic 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Typescript Test > Basic Context 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Typescript Test > Basic OnMount Update 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

export interface Props {
  hi: string;
  bye: string;
}

function MyBasicOnMountUpdateComponent(props: Props) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  const [names, setNames] = useState(() => [\\"Steve\\", \\"PatrickJS\\"]);

  useEffect(() => {
    setName(\\"PatrickJS onInit\\" + props.hi);
  }, []);

  useEffect(() => {
    setName(\\"PatrickJS onMount\\" + props.bye);
  }, []);

  return <div>Hello {name}</div>;
}

export default MyBasicOnMountUpdateComponent;
"
`;

exports[`React > jsx > Typescript Test > Basic Outputs 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function MyBasicOutputsComponent(props: any) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    props.onMessage(name);
    props.onEvent(props.message);
  }, []);

  return <div />;
}

export default MyBasicOutputsComponent;
"
`;

exports[`React > jsx > Typescript Test > Basic Outputs Meta 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function MyBasicOutputsComponent(props: any) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    props.onMessage(name);
    props.onEvent(props.message);
  }, []);

  return <div />;
}

export default MyBasicOutputsComponent;
"
`;

exports[`React > jsx > Typescript Test > BasicAttribute 1`] = `"Cannot read properties of undefined (reading 'spellcheck')"`;

exports[`React > jsx > Typescript Test > BasicBooleanAttribute 1`] = `"Cannot read properties of undefined (reading 'toggle')"`;

exports[`React > jsx > Typescript Test > BasicChildComponent 1`] = `"Cannot read properties of undefined (reading 'id')"`;

exports[`React > jsx > Typescript Test > BasicFor 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Typescript Test > BasicRef 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Typescript Test > BasicRefAssignment 1`] = `"Cannot read properties of undefined (reading 'onClick')"`;

exports[`React > jsx > Typescript Test > BasicRefPrevious 1`] = `"Cannot read properties of undefined (reading 'onClick')"`;

exports[`React > jsx > Typescript Test > Button 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Typescript Test > Columns 1`] = `
"import * as React from \\"react\\";

type Column = {
  content: any; // TODO: Implement this when support for dynamic CSS lands

  width?: number;
};
export interface ColumnProps {
  columns?: Column[]; // TODO: Implement this when support for dynamic CSS lands

  space?: number; // TODO: Implement this when support for dynamic CSS lands

  stackColumnsAt?: \\"tablet\\" | \\"mobile\\" | \\"never\\"; // TODO: Implement this when support for dynamic CSS lands

  reverseColumnsWhenStacked?: boolean;
}

function Column(props: ColumnProps) {
  function getColumns() {
    return props.columns || [];
  }

  function getGutterSize() {
    return typeof props.space === \\"number\\" ? props.space || 0 : 20;
  }

  function getWidth(index: number) {
    const columns = getColumns();
    return (columns[index] && columns[index].width) || 100 / columns.length;
  }

  function getColumnCssWidth(index: number) {
    const columns = getColumns();
    const gutterSize = getGutterSize();
    const subtractWidth = (gutterSize * (columns.length - 1)) / columns.length;
    return \`calc(\${getWidth(index)}% - \${subtractWidth}px)\`;
  }

  return (
    <>
      <div className=\\"builder-columns div\\">
        {props.columns?.map((column, index) => (
          <div className=\\"builder-column div-2\\">
            {column.content}
            {index}
          </div>
        ))}
      </div>
      <style jsx>{\`
        .div {
          display: flex;
          flex-direction: column;
          align-items: stretch;
          line-height: normal;
        }
        @media (max-width: 999px) {
          .div {
            flex-direction: row;
          }
        }
        @media (max-width: 639px) {
          .div {
            flex-direction: row-reverse;
          }
        }
        .div-2 {
          flex-grow: 1;
        }
      \`}</style>
    </>
  );
}

export default Column;
"
`;

exports[`React > jsx > Typescript Test > ContentSlotHtml 1`] = `
"import * as React from \\"react\\";

type Props = {
  [key: string]: string | JSX.Element;
  slotTesting: JSX.Element;
};
import type { JSX } from \\"../../../../jsx-runtime\\";

function ContentSlotCode(props: Props) {
  return (
    <div>
      <>{props.slotTesting}</>
      <div>
        <hr />
      </div>
      <div>
        <>{props.children}</>
      </div>
    </div>
  );
}

export default ContentSlotCode;
"
`;

exports[`React > jsx > Typescript Test > ContentSlotJSX 1`] = `"Cannot read properties of undefined (reading 'name')"`;

exports[`React > jsx > Typescript Test > CustomCode 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Typescript Test > Embed 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Typescript Test > Form 1`] = `"Cannot read properties of undefined (reading 'validate')"`;

exports[`React > jsx > Typescript Test > Image 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Typescript Test > Image State 1`] = `"Cannot read properties of undefined (reading 'src')"`;

exports[`React > jsx > Typescript Test > Img 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`React > jsx > Typescript Test > Input 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Typescript Test > InputParent 1`] = `"Cannot read properties of undefined (reading 'onChange')"`;

exports[`React > jsx > Typescript Test > RawText 1`] = `"Cannot read properties of undefined (reading 'class')"`;

exports[`React > jsx > Typescript Test > Section 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Typescript Test > Select 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Typescript Test > SlotDefault 1`] = `
"import * as React from \\"react\\";

type Props = {
  [key: string]: string;
};

function SlotCode(props: Props) {
  return (
    <div>
      <>
        {props.children || <div className=\\"default-slot\\">Default content</div>}
      </>
    </div>
  );
}

export default SlotCode;
"
`;

exports[`React > jsx > Typescript Test > SlotHtml 1`] = `
"import * as React from \\"react\\";

type Props = {
  [key: string]: string;
};
import ContentSlotCode from \\"./content-slot-jsx.raw\\";

function SlotCode(props: Props) {
  return (
    <div>
      <ContentSlotCode testing={<div>Hello</div>}></ContentSlotCode>
    </div>
  );
}

export default SlotCode;
"
`;

exports[`React > jsx > Typescript Test > SlotJsx 1`] = `
"import * as React from \\"react\\";

type Props = {
  [key: string]: string;
};
import ContentSlotCode from \\"./content-slot-jsx.raw\\";

function SlotCode(props: Props) {
  return (
    <div>
      <ContentSlotCode slotTesting={<div>Hello</div>} />
    </div>
  );
}

export default SlotCode;
"
`;

exports[`React > jsx > Typescript Test > SlotNamed 1`] = `
"import * as React from \\"react\\";

type Props = {
  [key: string]: string;
};

function SlotCode(props: Props) {
  return (
    <div>
      <>{props.myAwesomeSlot}</>
      <>{props.top}</>
      <>{props.left || \\"Default left\\"}</>
      <>{props.children || \\"Default Child\\"}</>
    </div>
  );
}

export default SlotCode;
"
`;

exports[`React > jsx > Typescript Test > Stamped.io 1`] = `"Cannot read properties of undefined (reading 'data-user')"`;

exports[`React > jsx > Typescript Test > Submit 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Typescript Test > Text 1`] = `"Cannot read properties of undefined (reading 'contentEditable')"`;

exports[`React > jsx > Typescript Test > Textarea 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Typescript Test > Video 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Typescript Test > arrowFunctionInUseStore 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props: any) {
  const [name, setName] = useState(() => \\"steve\\");

  function setName(value) {
    setName(value);
  }

  function updateNameWithArrowFn(value) {
    setName(value);
  }

  return <div>Hello {name}</div>;
}

export default MyComponent;
"
`;

exports[`React > jsx > Typescript Test > basicForNoTagReference 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyBasicForNoTagRefComponent(props: any) {
  const [name, setName] = useState(() => \\"VincentW\\");

  const [TagName, setTagName] = useState(() => \\"div\\");

  function TagNameGetter() {
    return \\"span\\";
  }

  const [Tag, setTag] = useState(() => \\"span\\");

  const TagNameGetterRef = TagNameGetter();

  return (
    <TagNameGetterRef>
      Hello <Tag>{name}</Tag>
      {props.actions?.map((action) => (
        <TagName>
          <action.icon />
          <span>{action.text}</span>
        </TagName>
      ))}
    </TagNameGetterRef>
  );
}

export default MyBasicForNoTagRefComponent;
"
`;

exports[`React > jsx > Typescript Test > basicForwardRef 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Typescript Test > basicForwardRefMetadata 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Typescript Test > basicOnUpdateReturn 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function MyBasicOnUpdateReturnComponent(props: any) {
  const [name, setName] = useState(() => \\"PatrickJS\\");

  useEffect(() => {
    const controller = new AbortController();
    const signal = controller.signal;
    fetch(\\"https://patrickjs.com/api/resource.json\\", {
      signal,
    })
      .then((response) => response.json())
      .then((data) => {
        setName(data.name);
      });
    return () => {
      if (!signal.aborted) {
        controller.abort();
      }
    };
  }, [name]);

  return <div>Hello! {name}</div>;
}

export default MyBasicOnUpdateReturnComponent;
"
`;

exports[`React > jsx > Typescript Test > class + ClassName + css 1`] = `
"import * as React from \\"react\\";

function MyBasicComponent(props: any) {
  return (
    <>
      <div className=\\"test2 test div\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
      <style jsx>{\`
        .div {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Typescript Test > class + css 1`] = `
"import * as React from \\"react\\";

function MyBasicComponent(props: any) {
  return (
    <>
      <div className=\\"test div\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
      <style jsx>{\`
        .div {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Typescript Test > className + css 1`] = `
"import * as React from \\"react\\";

function MyBasicComponent(props: any) {
  return (
    <>
      <div className=\\"test div\\">
        Hello! I can run in React, Vue, Solid, or Liquid!
      </div>
      <style jsx>{\`
        .div {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Typescript Test > className 1`] = `"Cannot read properties of undefined (reading 'class')"`;

exports[`React > jsx > Typescript Test > classState 1`] = `"Cannot read properties of undefined (reading 'class')"`;

exports[`React > jsx > Typescript Test > componentWithContext 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Typescript Test > componentWithContextMultiRoot 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Typescript Test > contentState 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Typescript Test > defaultProps 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Typescript Test > defaultPropsOutsideComponent 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Typescript Test > defaultValsWithTypes 1`] = `
"import * as React from \\"react\\";

type Props = {
  name: string;
};

const DEFAULT_VALUES: Props = {
  name: \\"Sami\\",
};

function ComponentWithTypes(props: Props) {
  return <div> Hello {props.name || DEFAULT_VALUES.name}</div>;
}

export default ComponentWithTypes;
"
`;

exports[`React > jsx > Typescript Test > expressionState 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props: any) {
  const [refToUse, setRefToUse] = useState(() =>
    !(props.componentRef instanceof Function) ? props.componentRef : null
  );

  return <div>{refToUse}</div>;
}

export default MyComponent;
"
`;

exports[`React > jsx > Typescript Test > getterState 1`] = `
"import * as React from \\"react\\";

export interface ButtonProps {
  foo: string;
}

function Button(props: ButtonProps) {
  function foo2() {
    return props.foo + \\"foo\\";
  }

  function bar() {
    return \\"bar\\";
  }

  function baz(i: number) {
    return i + foo2().length;
  }

  return (
    <div>
      <p>{foo2()}</p>
      <p>{bar()}</p>
      <p>{baz(1)}</p>
    </div>
  );
}

export default Button;
"
`;

exports[`React > jsx > Typescript Test > import types 1`] = `"Cannot read properties of undefined (reading 'state.getRenderContentProps(props.renderContentProps.block, 0)')"`;

exports[`React > jsx > Typescript Test > multipleOnUpdate 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function MultipleOnUpdate(props: any) {
  useEffect(() => {
    console.log(\\"Runs on every update/rerender\\");
  });
  useEffect(() => {
    console.log(\\"Runs on every update/rerender as well\\");
  });

  return <div />;
}

export default MultipleOnUpdate;
"
`;

exports[`React > jsx > Typescript Test > multipleOnUpdateWithDeps 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function MultipleOnUpdateWithDeps(props: any) {
  const [a, setA] = useState(() => \\"a\\");

  const [b, setB] = useState(() => \\"b\\");

  const [c, setC] = useState(() => \\"c\\");

  const [d, setD] = useState(() => \\"d\\");

  useEffect(() => {
    console.log(\\"Runs when a or b changes\\", a, b);

    if (a === \\"a\\") {
      setA(\\"b\\");
    }
  }, [a, b]);
  useEffect(() => {
    console.log(\\"Runs when c or d changes\\", c, d);

    if (a === \\"a\\") {
      setA(\\"b\\");
    }
  }, [c, d]);

  return <div />;
}

export default MultipleOnUpdateWithDeps;
"
`;

exports[`React > jsx > Typescript Test > multipleSpreads 1`] = `"Cannot read properties of undefined (reading 'attrs')"`;

exports[`React > jsx > Typescript Test > nestedShow 1`] = `
"import * as React from \\"react\\";

interface Props {
  conditionA: boolean;
  conditionB: boolean;
}

function NestedShow(props: Props) {
  return (
    <>
      {props.conditionA ? (
        <>
          {!props.conditionB ? (
            <div>if condition A and condition B</div>
          ) : (
            <div>else-condition-B</div>
          )}
        </>
      ) : (
        <div>else-condition-A</div>
      )}
    </>
  );
}

export default NestedShow;
"
`;

exports[`React > jsx > Typescript Test > nestedStyles 1`] = `
"import * as React from \\"react\\";

function NestedStyles(props: any) {
  return (
    <>
      <div className=\\"div\\">Hello world</div>
      <style jsx>{\`
        .div {
          display: flex;
          --bar: red;
          color: var(--bar);
        }
        @media (max-width: env(--mobile)) {
          .div {
            display: block;
          }
        }
        .div:hover {
          display: flex;
        }
        .div:active {
          display: inline;
        }
        .div .nested-selector {
          display: grid;
        }
        .div .nested-selector:hover {
          display: block;
        }
        .div.nested-selector:active {
          display: inline-block;
        }
      \`}</style>
    </>
  );
}

export default NestedStyles;
"
`;

exports[`React > jsx > Typescript Test > onEvent 1`] = `"Cannot read properties of undefined (reading 'ref')"`;

exports[`React > jsx > Typescript Test > onInit & onMount 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function OnInit(props: any) {
  useEffect(() => {
    console.log(\\"onInit\\");
  }, []);

  useEffect(() => {
    console.log(\\"onMount\\");
  }, []);

  return <div />;
}

export default OnInit;
"
`;

exports[`React > jsx > Typescript Test > onInit 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

type Props = {
  name: string;
};

export const defaultValues = {
  name: \\"PatrickJS\\",
};

function OnInit(props: Props) {
  const [name, setName] = useState(() => \\"\\");

  useEffect(() => {
    setName(defaultValues.name || props.name);
    console.log(\\"set defaults with props\\");
  }, []);

  return <div>Default name defined by parent {name}</div>;
}

export default OnInit;
"
`;

exports[`React > jsx > Typescript Test > onMount 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function Comp(props: any) {
  useEffect(() => {
    console.log(\\"Runs on mount\\");
  }, []);

  useEffect(() => {
    return () => {
      console.log(\\"Runs on unMount\\");
    };
  }, []);

  return <div />;
}

export default Comp;
"
`;

exports[`React > jsx > Typescript Test > onMountMultiple 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function Comp(props: any) {
  useEffect(() => {
    console.log(\\"Runs on mount\\");
  }, []);
  useEffect(() => {
    console.log(\\"Another one runs on Mount\\");
  }, []);
  useEffect(() => {
    console.log(\\"SSR runs on Mount\\");
  }, []);

  return <div />;
}

export default Comp;
"
`;

exports[`React > jsx > Typescript Test > onUpdate 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function OnUpdate(props: any) {
  useEffect(() => {
    console.log(\\"Runs on every update/rerender\\");
  });

  return <div />;
}

export default OnUpdate;
"
`;

exports[`React > jsx > Typescript Test > onUpdateWithDeps 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

type Props = {
  size: string;
};

function OnUpdateWithDeps(props: Props) {
  const [a, setA] = useState(() => \\"a\\");

  const [b, setB] = useState(() => \\"b\\");

  useEffect(() => {
    console.log(\\"Runs when a, b or size changes\\", a, b, props.size);
  }, [a, b, props.size]);

  return <div />;
}

export default OnUpdateWithDeps;
"
`;

exports[`React > jsx > Typescript Test > preserveExportOrLocalStatement 1`] = `
"import * as React from \\"react\\";

type Types = {
  s: any[];
};
interface IPost {
  len: number;
}
export interface MyBasicComponentProps {
  id: string;
}

const b = 3;
const foo = () => {};
export const a = 3;
export const bar = () => {};
export function run<T>(value: T) {}

function MyBasicComponent(props: MyBasicComponentProps) {
  return <div />;
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Typescript Test > preserveTyping 1`] = `
"import * as React from \\"react\\";

export type A = \\"test\\";
export interface C {
  n: \\"test\\";
}
type B = \\"test2\\";
interface D {
  n: \\"test\\";
}
export interface MyBasicComponentProps {
  name: string;
  age?: number;
}

function MyBasicComponent(props: MyBasicComponentProps) {
  return (
    <div>Hello! I can run in React, Vue, Solid, or Liquid! {props.name}</div>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Typescript Test > propsDestructure 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

type Props = {
  children: any;
  type: string;
};

function MyBasicComponent(props: Props) {
  const [name, setName] = useState(() => \\"Decadef20\\");

  return (
    <div>
      {props.children}
      {props.type}
      Hello! I can run in React, Vue, Solid, or Liquid!
    </div>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Typescript Test > propsInterface 1`] = `
"import * as React from \\"react\\";

interface Person {
  name: string;
  age?: number;
}

function MyBasicComponent(props: Person | never) {
  return (
    <div>Hello! I can run in React, Vue, Solid, or Liquid! {props.name}</div>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Typescript Test > propsType 1`] = `
"import * as React from \\"react\\";

type Person = {
  name: string;
  age?: number;
};

function MyBasicComponent(props: Person) {
  return (
    <div>Hello! I can run in React, Vue, Solid, or Liquid! {props.name}</div>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Typescript Test > referencingFunInsideHook 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function OnUpdate(props: any) {
  function foo(params) {}

  function bar() {}

  function zoo() {
    const params = {
      cb: bar,
    };
  }

  useEffect(() => {
    foo({
      someOption: bar,
    });
  });

  return <div />;
}

export default OnUpdate;
"
`;

exports[`React > jsx > Typescript Test > renderBlock 1`] = `"Cannot read properties of undefined (reading 'state.attributes')"`;

exports[`React > jsx > Typescript Test > renderContentExample 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > jsx > Typescript Test > rootFragmentMultiNode 1`] = `"Cannot read properties of undefined (reading 'props.attributes')"`;

exports[`React > jsx > Typescript Test > rootShow 1`] = `
"import * as React from \\"react\\";

export interface RenderStylesProps {
  foo: string;
}

function RenderStyles(props: RenderStylesProps) {
  return (
    <>
      {props.foo === \\"bar\\" ? (
        <>
          <div>Bar</div>
        </>
      ) : (
        <div>Foo</div>
      )}
    </>
  );
}

export default RenderStyles;
"
`;

exports[`React > jsx > Typescript Test > self-referencing component 1`] = `
"import * as React from \\"react\\";

function MyComponent(props: any) {
  return (
    <div>
      {props.name}
      {props.name === \\"Batman\\" ? <MyComponent name=\\"Bruce Wayne\\" /> : null}
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > jsx > Typescript Test > self-referencing component with children 1`] = `
"import * as React from \\"react\\";

function MyComponent(props: any) {
  return (
    <div>
      {props.name}
      {props.children}
      {props.name === \\"Batman\\" ? (
        <MyComponent name=\\"Bruce\\">
          <div>Wayne</div>
        </MyComponent>
      ) : null}
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > jsx > Typescript Test > showWithFor 1`] = `"Cannot read properties of undefined (reading 'key')"`;

exports[`React > jsx > Typescript Test > showWithRootText 1`] = `
"import * as React from \\"react\\";

interface Props {
  conditionA: boolean;
}

function ShowRootText(props: Props) {
  return <>{props.conditionA ? <>ContentA</> : <div>else-condition-A</div>}</>;
}

export default ShowRootText;
"
`;

exports[`React > jsx > Typescript Test > signalsOnUpdate 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

type Props = {
  id: string;
  foo: {
    bar: {
      baz: number;
    };
  };
};

function MyBasicComponent(props: Props) {
  useEffect(() => {
    console.log(\\"props.id changed\\", props.id);
    console.log(\\"props.foo.value.bar.baz changed\\", props.foo.bar.baz);
  }, [props.id, props.foo.bar.baz]);

  return (
    <>
      <div className=\\"test div\\">
        {props.id}
        {props.foo.bar.baz}
      </div>
      <style jsx>{\`
        .div {
          padding: 10px;
        }
      \`}</style>
    </>
  );
}

export default MyBasicComponent;
"
`;

exports[`React > jsx > Typescript Test > spreadAttrs 1`] = `"Cannot read properties of undefined (reading 'attrs')"`;

exports[`React > jsx > Typescript Test > spreadNestedProps 1`] = `"Cannot read properties of undefined (reading 'props.nested')"`;

exports[`React > jsx > Typescript Test > spreadProps 1`] = `"Cannot read properties of undefined (reading 'props')"`;

exports[`React > jsx > Typescript Test > styleClassAndCss 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`React > jsx > Typescript Test > stylePropClassAndCss 1`] = `"Cannot read properties of undefined (reading 'style')"`;

exports[`React > jsx > Typescript Test > subComponent 1`] = `
"import * as React from \\"react\\";
import Foo from \\"./foo-sub-component\\";

function SubComponent(props: any) {
  return <Foo />;
}

export default SubComponent;
"
`;

exports[`React > jsx > Typescript Test > svgComponent 1`] = `"Cannot read properties of undefined (reading 'viewBox')"`;

exports[`React > jsx > Typescript Test > typeDependency 1`] = `
"import * as React from \\"react\\";

export type TypeDependencyProps = {
  foo: Foo;
  foo2: Foo2;
};
import type { Foo } from \\"./foo-type\\";
import type { Foo as Foo2 } from \\"./type-export\\";

function TypeDependency(props: TypeDependencyProps) {
  return <div>{props.foo}</div>;
}

export default TypeDependency;
"
`;

exports[`React > jsx > Typescript Test > use-style 1`] = `
"import * as React from \\"react\\";

function MyComponent(props: any) {
  return (
    <>
      <button type=\\"button\\">Button</button>
      <style jsx>{\`
        button {
          background: blue;
          color: white;
          font-size: 12px;
          outline: 1px solid black;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`React > jsx > Typescript Test > use-style-and-css 1`] = `
"import * as React from \\"react\\";

function MyComponent(props: any) {
  return (
    <>
      <button type=\\"button\\" className=\\"button\\">
        Button
      </button>
      <style jsx>{\`
        button {
          font-size: 12px;
          outline: 1px solid black;
        }

        .button {
          background: blue;
          color: white;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`React > jsx > Typescript Test > use-style-outside-component 1`] = `
"import * as React from \\"react\\";

function MyComponent(props: any) {
  return (
    <>
      <button type=\\"button\\">Button</button>
      <style jsx>{\`
        button {
          background: blue;
          color: white;
          font-size: 12px;
          outline: 1px solid black;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`React > jsx > Typescript Test > useTarget 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function UseTargetComponent(props: any) {
  function name() {
    const prefix = 123;
    return prefix + \\"foo\\";
  }

  const [lastName, setLastName] = useState(() => \\"bar\\");

  useEffect(() => {
    console.log(\\"react\\");
    setLastName(\\"baz\\");
  }, []);

  return <div>{name()}</div>;
}

export default UseTargetComponent;
"
`;

exports[`React > jsx > Typescript Test > webComponent 1`] = `
"import * as React from \\"react\\";
import { useEffect } from \\"react\\";
import { register } from \\"swiper/element/bundle\\";

function MyBasicWebComponent(props: any) {
  useEffect(() => {
    register();
  }, []);

  return (
    <swiper-container slides-per-view=\\"3\\" navigation=\\"true\\" pagination=\\"true\\">
      <swiper-slide>Slide 1</swiper-slide>
      <swiper-slide>Slide 2</swiper-slide>
      <swiper-slide>Slide 3</swiper-slide>
    </swiper-container>
  );
}

export default MyBasicWebComponent;
"
`;

exports[`React > svelte > Javascript Test > basic 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props) {
  const [name, setName] = useState(() => \\"Steve\\");

  return (
    <div>
      <input onChange={(event) => setName(event.target.value)} value={name} />
      Hello! I can run in React, Vue, Solid, or Liquid!
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > bindGroup 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props) {
  const [tortilla, setTortilla] = useState(() => \\"Plain\\");

  const [fillings, setFillings] = useState(() => []);

  return (
    <div>
      <input
        type=\\"radio\\"
        value=\\"Plain\\"
        checked={tortilla === \\"Plain\\"}
        onChange={(event) => setTortilla(event.target.value)}
      />
      <input
        type=\\"radio\\"
        value=\\"Whole wheat\\"
        checked={tortilla === \\"Whole wheat\\"}
        onChange={(event) => setTortilla(event.target.value)}
      />
      <input
        type=\\"radio\\"
        value=\\"Spinach\\"
        checked={tortilla === \\"Spinach\\"}
        onChange={(event) => setTortilla(event.target.value)}
      />
      <br />
      <br />
      <input
        type=\\"checkbox\\"
        value=\\"Rice\\"
        checked={fillings === \\"Rice\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <input
        type=\\"checkbox\\"
        value=\\"Beans\\"
        checked={fillings === \\"Beans\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <input
        type=\\"checkbox\\"
        value=\\"Cheese\\"
        checked={fillings === \\"Cheese\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <input
        type=\\"checkbox\\"
        value=\\"Guac (extra)\\"
        checked={fillings === \\"Guac (extra)\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <p>Tortilla: {tortilla}</p>
      <p>Fillings: {fillings}</p>
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > bindProperty 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props) {
  const [value, setValue] = useState(() => \\"hello\\");

  return <input value={value} />;
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > classDirective 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props) {
  const [focus, setFocus] = useState(() => true);

  return (
    <input
      className={\`form-input \${props.disabled ? \\"disabled\\" : \\"\\"} \${
        focus ? \\"focus\\" : \\"\\"
      }\`}
    />
  );
}

MyComponent.defaultProps = {};

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > context 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > svelte > Javascript Test > each 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props) {
  const [numbers, setNumbers] = useState(() => [\\"one\\", \\"two\\", \\"three\\"]);

  return (
    <ul>
      {numbers?.map((num) => (
        <li>{num}</li>
      ))}
    </ul>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > eventHandlers 1`] = `
"\\"use client\\";
import * as React from \\"react\\";

function MyComponent(props) {
  function log(msg = \\"hello\\") {
    console.log(msg);
  }

  return (
    <div>
      <button onClick={(a) => log(\\"hi\\")}>Log</button>
      <button onClick={(event) => log(event)}>Log</button>
      <button onClick={(event) => log(event)}>Log</button>
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > html 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props) {
  const [html, setHtml] = useState(() => \\"<b>bold</b>\\");

  return <div dangerouslySetInnerHTML={{ __html: html }} />;
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > ifElse 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props) {
  const [show, setShow] = useState(() => true);

  function toggle() {
    setShow(!show);
  }

  return (
    <>
      {show ? (
        <>
          <button onClick={(event) => toggle(event)}> Hide </button>
        </>
      ) : (
        <button onClick={(event) => toggle(event)}> Show </button>
      )}
    </>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > imports 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import Button from \\"./Button\\";

function MyComponent(props) {
  const [disabled, setDisabled] = useState(() => false);

  return (
    <div>
      <Button type=\\"button\\" disabled={disabled}>
        <>{props.children}</>
      </Button>
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > lifecycleHooks 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function MyComponent(props) {
  useEffect(() => {
    console.log(\\"onMount\\");
  }, []);

  useEffect(() => {
    console.log(\\"onAfterUpdate\\");
  });

  useEffect(() => {
    return () => {
      console.log(\\"onDestroy\\");
    };
  }, []);

  return <div />;
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > reactive 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props) {
  const [name, setName] = useState(() => \\"Steve\\");

  function lowercaseName() {
    return name.toLowerCase();
  }

  return (
    <div>
      <input value={name} />
      Lowercase: {lowercaseName()}
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > reactiveWithFn 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function MyComponent(props) {
  const [a, setA] = useState(() => 2);

  const [b, setB] = useState(() => 5);

  const [result, setResult] = useState(() => null);

  function calculateResult(a_, b_) {
    setResult(a_ * b_);
  }

  useEffect(() => {
    calculateResult(a, b);
  }, [a, b]);

  return (
    <div>
      <input
        type=\\"number\\"
        onChange={(event) => setA(event.target.value)}
        value={a}
      />
      <input
        type=\\"number\\"
        onChange={(event) => setB(event.target.value)}
        value={b}
      />
      Result: {result}
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > slots 1`] = `
"import * as React from \\"react\\";

function MyComponent(props) {
  return (
    <div>
      <>{props.children || \\"default\\"}</>
      <>{props.Test || <div>default</div>}</>
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > style 1`] = `
"import * as React from \\"react\\";

function MyComponent(props) {
  return (
    <>
      <input className=\\"form-input\\" />
      <style jsx>{\`
        input {
          color: red;
          font-size: 12px;
        }

        .form-input:focus {
          outline: 1px solid blue;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Javascript Test > textExpressions 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props) {
  const [a, setA] = useState(() => 5);

  const [b, setB] = useState(() => 12);

  return (
    <div>
      normal:
      {a + b}
      <br />
      conditional
      {a > 2 ? \\"hello\\" : \\"bye\\"}
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > basic 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props: any) {
  const [name, setName] = useState(() => \\"Steve\\");

  return (
    <div>
      <input onChange={(event) => setName(event.target.value)} value={name} />
      Hello! I can run in React, Vue, Solid, or Liquid!
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > bindGroup 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props: any) {
  const [tortilla, setTortilla] = useState(() => \\"Plain\\");

  const [fillings, setFillings] = useState(() => []);

  return (
    <div>
      <input
        type=\\"radio\\"
        value=\\"Plain\\"
        checked={tortilla === \\"Plain\\"}
        onChange={(event) => setTortilla(event.target.value)}
      />
      <input
        type=\\"radio\\"
        value=\\"Whole wheat\\"
        checked={tortilla === \\"Whole wheat\\"}
        onChange={(event) => setTortilla(event.target.value)}
      />
      <input
        type=\\"radio\\"
        value=\\"Spinach\\"
        checked={tortilla === \\"Spinach\\"}
        onChange={(event) => setTortilla(event.target.value)}
      />
      <br />
      <br />
      <input
        type=\\"checkbox\\"
        value=\\"Rice\\"
        checked={fillings === \\"Rice\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <input
        type=\\"checkbox\\"
        value=\\"Beans\\"
        checked={fillings === \\"Beans\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <input
        type=\\"checkbox\\"
        value=\\"Cheese\\"
        checked={fillings === \\"Cheese\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <input
        type=\\"checkbox\\"
        value=\\"Guac (extra)\\"
        checked={fillings === \\"Guac (extra)\\"}
        onChange={(event) => setFillings(event.target.value)}
      />
      <p>Tortilla: {tortilla}</p>
      <p>Fillings: {fillings}</p>
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > bindProperty 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props: any) {
  const [value, setValue] = useState(() => \\"hello\\");

  return <input value={value} />;
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > classDirective 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props: any) {
  const [focus, setFocus] = useState(() => true);

  return (
    <input
      className={\`form-input \${props.disabled ? \\"disabled\\" : \\"\\"} \${
        focus ? \\"focus\\" : \\"\\"
      }\`}
    />
  );
}

MyComponent.defaultProps = {};

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > context 1`] = `"Cannot read properties of undefined (reading 'value')"`;

exports[`React > svelte > Typescript Test > each 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props: any) {
  const [numbers, setNumbers] = useState(() => [\\"one\\", \\"two\\", \\"three\\"]);

  return (
    <ul>
      {numbers?.map((num) => (
        <li>{num}</li>
      ))}
    </ul>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > eventHandlers 1`] = `
"\\"use client\\";
import * as React from \\"react\\";

function MyComponent(props: any) {
  function log(msg = \\"hello\\") {
    console.log(msg);
  }

  return (
    <div>
      <button onClick={(a) => log(\\"hi\\")}>Log</button>
      <button onClick={(event) => log(event)}>Log</button>
      <button onClick={(event) => log(event)}>Log</button>
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > html 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props: any) {
  const [html, setHtml] = useState(() => \\"<b>bold</b>\\");

  return <div dangerouslySetInnerHTML={{ __html: html }} />;
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > ifElse 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props: any) {
  const [show, setShow] = useState(() => true);

  function toggle() {
    setShow(!show);
  }

  return (
    <>
      {show ? (
        <>
          <button onClick={(event) => toggle(event)}> Hide </button>
        </>
      ) : (
        <button onClick={(event) => toggle(event)}> Show </button>
      )}
    </>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > imports 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";
import Button from \\"./Button\\";

function MyComponent(props: any) {
  const [disabled, setDisabled] = useState(() => false);

  return (
    <div>
      <Button type=\\"button\\" disabled={disabled}>
        <>{props.children}</>
      </Button>
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > lifecycleHooks 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useEffect } from \\"react\\";

function MyComponent(props: any) {
  useEffect(() => {
    console.log(\\"onMount\\");
  }, []);

  useEffect(() => {
    console.log(\\"onAfterUpdate\\");
  });

  useEffect(() => {
    return () => {
      console.log(\\"onDestroy\\");
    };
  }, []);

  return <div />;
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > reactive 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props: any) {
  const [name, setName] = useState(() => \\"Steve\\");

  function lowercaseName() {
    return name.toLowerCase();
  }

  return (
    <div>
      <input value={name} />
      Lowercase: {lowercaseName()}
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > reactiveWithFn 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState, useEffect } from \\"react\\";

function MyComponent(props: any) {
  const [a, setA] = useState(() => 2);

  const [b, setB] = useState(() => 5);

  const [result, setResult] = useState(() => null);

  function calculateResult(a_, b_) {
    setResult(a_ * b_);
  }

  useEffect(() => {
    calculateResult(a, b);
  }, [a, b]);

  return (
    <div>
      <input
        type=\\"number\\"
        onChange={(event) => setA(event.target.value)}
        value={a}
      />
      <input
        type=\\"number\\"
        onChange={(event) => setB(event.target.value)}
        value={b}
      />
      Result: {result}
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > slots 1`] = `
"import * as React from \\"react\\";

function MyComponent(props: any) {
  return (
    <div>
      <>{props.children || \\"default\\"}</>
      <>{props.Test || <div>default</div>}</>
    </div>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > style 1`] = `
"import * as React from \\"react\\";

function MyComponent(props: any) {
  return (
    <>
      <input className=\\"form-input\\" />
      <style jsx>{\`
        input {
          color: red;
          font-size: 12px;
        }

        .form-input:focus {
          outline: 1px solid blue;
        }
      \`}</style>
    </>
  );
}

export default MyComponent;
"
`;

exports[`React > svelte > Typescript Test > textExpressions 1`] = `
"\\"use client\\";
import * as React from \\"react\\";
import { useState } from \\"react\\";

function MyComponent(props: any) {
  const [a, setA] = useState(() => 5);

  const [b, setB] = useState(() => 12);

  return (
    <div>
      normal:
      {a + b}
      <br />
      conditional
      {a > 2 ? \\"hello\\" : \\"bye\\"}
    </div>
  );
}

export default MyComponent;
"
`;
